Alignment fixes. Fixed two lines of dates on regular cards.

--- a/src/app/showcase/pages/blogs/blogs.component.css
+++ b/src/app/showcase/pages/blogs/blogs.component.css
@@ -22,7 +22,6 @@ mat-card {
     width: 100%;
     border-radius: 10px;
     margin-top: 20px;
-    max-width: 500px;
 }
 
 mat-card-title {
